--- a/src/core/ui/layout/value-slider/value-slider.scss
+++ b/src/core/ui/layout/value-slider/value-slider.scss
@@ -59,3 +59,48 @@
   -webkit-mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.25112 4.80948L0 0L10.5022 6.84265e-07L5.25112 4.80948Z" fill="black"/></svg>') no-repeat;
   mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.25112 4.80948L0 0L10.5022 6.84265e-07L5.25112 4.80948Z" fill="black"/></svg>') no-repeat;
 }
+
+.slider-inputs {
+  display: flex;
+  justify-content: space-between;
+  max-width: 225px;
+}
+
+.input-number-field {
+  $root: &;
+  display: inline-block;
+
+  &__label {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1px 0;
+    border: 1px solid rgba(96, 96, 96, 1);
+    border-radius: 3px;
+    min-width: 20px;
+    height: 20px;
+    box-sizing: border-box;
+  }
+
+  &__input {
+    width: auto;
+    min-width: 1em;
+    max-width: 100%;
+    border: none;
+    background-color: transparent;
+    color: rgba(96, 96, 96, 1);
+    caret-color: rgba(96, 96, 96, 1);
+    font-size: 14px;
+    padding: 0;
+    text-align: center;
+    margin: 0 auto;
+
+    &:focus {
+      outline: none;
+    }
+
+    &::placeholder {
+      text-align: center;
+    }
+  }
+}
