--- a/src/core/ui/layout/value-slider/value-slider.scss
+++ b/src/core/ui/layout/value-slider/value-slider.scss
@@ -2,13 +2,25 @@
   font-weight: 600;
 }
 
-.slider-track {
+
+.slider-default-track {
   position: relative;
   width: 225px;
   height: 4px;
   background: var(--slider-track-bg, #e0e0e0);
   border-radius: 3px;
   margin: 23px 0 15px 0;
+  z-index: 0; /* Явно задаем z-index */
+}
+
+.slider-track {
+  position: relative;
+  width: 211px;
+  height: 4px;
+  background: var(--slider-track-bg, #e0e0e0);
+  border-radius: 3px;
+  margin: -19px 7px 15px 7px;
+  z-index: 1; /* Делаем выше */
 }
 
 .slider-fill {
