--- a/src/sections/side-filter/side-filter.scss
+++ b/src/sections/side-filter/side-filter.scss
@@ -16,7 +16,7 @@
 .side-filter__container {
   background: var(--sf-bg-container);
   border-radius: inherit;
-  padding: 20px 16px;
+  padding: 15px 22px 17px 17px;
   position: relative;
 }
 
