--- a/src/core/ui/layout/green-button/green-button.pug
+++ b/src/core/ui/layout/green-button/green-button.pug
@@ -2,8 +2,11 @@ mixin svgClose(name)
   svg(class="icon-" +name width="18" height="18" viewBox="0 0 18 18" aria-hidden="true")
     use(href="./assets/icons/default/sprite.svg#" + name)
 
-mixin green-button (text) 
+mixin green-button(text, options)
+  - const buttonText = typeof options === 'string' ? options : options?.text;
+  - const buttonId = typeof options === 'object' && 'el'+options?.text.replace(/\s/g, "");
+  
   .green-button 
     label.green-button_label= text 
-    button.green-button_close
-      +svgClose("Cancel")
+    button.green-button__close
+        +svgClose("Cancel").svg-icon-close 
