настроила инпуты у слайдера

--- a/src/core/ui/layout/value-slider/value-slider.pug
+++ b/src/core/ui/layout/value-slider/value-slider.pug
@@ -7,8 +7,7 @@ mixin input-number-field(options = {})
         name=options.id,
         placeholder=options.placeholder,
         value=options.value,
-        required=options.required,
-        readonly = true
+        required=options.required
       )
 
 mixin value-slider(options)
