--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -432,6 +432,7 @@
 
 .input-number-field__input:focus {
   outline: none;
+  color: rgb(255, 255, 255);
 }
 
 .input-number-field__input::-webkit-input-placeholder {
