--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 @font-face {
   font-family: "Proxima Nova";
   src: local("Proxima Nova"), url("../assets/fonts/proximanova_regular.otf") format("opentype"), url("../assets/fonts/proximanova_regular.ttf") format("truetype");
@@ -303,72 +301,87 @@
 
 .slider-title {
   font-weight: 600;
+  margin-bottom: 15px;
 }
 
-.slider-default-track {
-  position: relative;
-  width: 225px;
-  height: 4px;
-  background: var(--slider-track-bg, #e0e0e0);
-  border-radius: 3px;
+.nouislider-target {
   margin: 23px 0 15px 0;
-  z-index: 0;
-  /* Явно задаем z-index */
+  width: 225px;
 }
 
-.slider-track {
-  position: relative;
-  width: 211px;
-  height: 4px;
+.nouislider-target.noUi-target {
   background: var(--slider-track-bg, #e0e0e0);
   border-radius: 3px;
-  margin: -19px 7px 15px 7px;
-  z-index: 1;
-  /* Делаем выше */
+  border: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  height: 4px !important;
 }
 
-.slider-fill {
-  position: absolute;
-  height: 100%;
+.nouislider-target .noUi-connect {
   background: var(--slider-active-bg, #2e7d32);
   -webkit-box-shadow: 0 3px 15px var(--slider-active-shadow, rgba(46, 125, 50, 0.2));
   box-shadow: 0 3px 15px var(--slider-active-shadow, rgba(46, 125, 50, 0.2));
   border-radius: 3px;
 }
 
-.slider-handle {
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  background: linear-gradient(193deg, #1b5e20 24%, #43a047 86%);
-  -webkit-box-shadow: inset 3px 5px 12px rgba(255, 255, 255, 0.2), 0 10px 27px rgba(30, 29, 46, 0.3);
-  box-shadow: inset 3px 5px 12px rgba(255, 255, 255, 0.2), 0 10px 27px rgba(30, 29, 46, 0.3);
+.nouislider-target .noUi-handle {
+  width: 16px !important;
+  height: 16px !important;
+  border-radius: 50% !important;
+  background: linear-gradient(193deg, #1b5e20 24%, #43a047 86%) !important;
+  -webkit-box-shadow: inset 3px 5px 12px rgba(255, 255, 255, 0.2), 0 10px 27px rgba(30, 29, 46, 0.3) !important;
+  box-shadow: inset 3px 5px 12px rgba(255, 255, 255, 0.2), 0 10px 27px rgba(30, 29, 46, 0.3) !important;
+  border: none !important;
   cursor: -webkit-grab;
   cursor: grab;
-  z-index: 1;
+  top: -6px !important;
 }
 
-.slider-tooltip {
+.nouislider-target .noUi-handle::before,
+.nouislider-target .noUi-handle::after {
+  display: none;
+}
+
+.nouislider-target .noUi-handle.noUi-handle-lower {
+  right: -15px !important;
+}
+
+.nouislider-target .noUi-handle.noUi-handle-upper {
+  right: -1px !important;
+}
+
+.nouislider-target .noUi-handle:hover .noUi-tooltip,
+.nouislider-target .noUi-handle.noUi-active .noUi-tooltip {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+.nouislider-target .noUi-active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+.nouislider-target .noUi-tooltip {
   position: absolute;
-  bottom: 29px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
   padding: 2px 5px;
   background: var(--slider-tooltip-bg, rgb(48, 48, 61));
   color: white;
   border-radius: 3px;
   font-size: 16px;
+  line-height: 135%;
   white-space: nowrap;
+  border: none;
+  margin-bottom: 7px;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
+  transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
 }
 
-.slider-tooltip::after {
+.nouislider-target .noUi-tooltip::after {
   content: "";
   position: absolute;
   bottom: -5px;
@@ -376,11 +389,11 @@
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
-  width: 12px;
+  width: 11px;
   height: 5px;
-  background: #30303D;
-  -webkit-mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.25112 4.80948L0 0L10.5022 6.84265e-07L5.25112 4.80948Z" fill="black"/></svg>') no-repeat;
-  mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.25112 4.80948L0 0L10.5022 6.84265e-07L5.25112 4.80948Z" fill="black"/></svg>') no-repeat;
+  background-color: var(--slider-tooltip-bg, rgb(48, 48, 61));
+  -webkit-mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 5L0 0h11L5.5 5z" fill="black"/></svg>') no-repeat center center/contain;
+  mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 5L0 0h11L5.5 5z" fill="black"/></svg>') no-repeat center center/contain;
 }
 
 .slider-inputs {
@@ -391,6 +404,7 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
   max-width: 225px;
+  margin-top: 10px;
 }
 
 .input-number-field {
@@ -632,6 +646,342 @@
 
 .green-button__close svg {
   display: block;
+}
+
+.noUi-target,
+.noUi-target * {
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -ms-touch-action: none;
+  touch-action: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.noUi-target {
+  position: relative;
+}
+
+.noUi-base,
+.noUi-connects {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
+
+.noUi-connects {
+  overflow: hidden;
+  z-index: 0;
+}
+
+.noUi-connect,
+.noUi-origin {
+  will-change: transform;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  -ms-transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  -webkit-transform-style: preserve-3d;
+  transform-origin: 0 0;
+  -webkit-transform-style: flat;
+  transform-style: flat;
+}
+
+.noUi-txt-dir-rtl.noUi-horizontal .noUi-origin {
+  left: 0;
+  right: auto;
+}
+
+.noUi-vertical .noUi-origin {
+  top: -100%;
+  width: 0;
+}
+
+.noUi-horizontal .noUi-origin {
+  height: 0;
+}
+
+.noUi-handle {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: absolute;
+}
+
+.noUi-touch-area {
+  height: 100%;
+  width: 100%;
+}
+
+.noUi-state-tap .noUi-connect,
+.noUi-state-tap .noUi-origin {
+  -webkit-transition: transform 0.3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.noUi-state-drag * {
+  cursor: inherit !important;
+}
+
+.noUi-horizontal {
+  height: 18px;
+}
+
+.noUi-horizontal .noUi-handle {
+  width: 34px;
+  height: 28px;
+  right: -17px;
+  top: -6px;
+}
+
+.noUi-vertical {
+  width: 18px;
+}
+
+.noUi-vertical .noUi-handle {
+  width: 28px;
+  height: 34px;
+  right: -6px;
+  bottom: -17px;
+}
+
+.noUi-txt-dir-rtl.noUi-horizontal .noUi-handle {
+  left: -17px;
+  right: auto;
+}
+
+.noUi-target {
+  background: #FAFAFA;
+  border-radius: 4px;
+  border: 1px solid #D3D3D3;
+  -webkit-box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+  box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
+}
+
+.noUi-connects {
+  border-radius: 3px;
+}
+
+.noUi-connect {
+  background: #3FB8AF;
+}
+
+.noUi-draggable {
+  cursor: ew-resize;
+}
+
+.noUi-vertical .noUi-draggable {
+  cursor: ns-resize;
+}
+
+.noUi-handle {
+  border: 1px solid #D9D9D9;
+  border-radius: 3px;
+  background: #FFF;
+  cursor: default;
+  -webkit-box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+  box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+}
+
+.noUi-active {
+  -webkit-box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
+  box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
+}
+
+.noUi-handle:after,
+.noUi-handle:before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 14px;
+  width: 1px;
+  background: #E8E7E6;
+  left: 14px;
+  top: 6px;
+}
+
+.noUi-handle:after {
+  left: 17px;
+}
+
+.noUi-vertical .noUi-handle:after,
+.noUi-vertical .noUi-handle:before {
+  width: 14px;
+  height: 1px;
+  left: 6px;
+  top: 14px;
+}
+
+.noUi-vertical .noUi-handle:after {
+  top: 17px;
+}
+
+[disabled] .noUi-connect {
+  background: #B8B8B8;
+}
+
+[disabled] .noUi-handle,
+[disabled].noUi-handle,
+[disabled].noUi-target {
+  cursor: not-allowed;
+}
+
+.noUi-pips,
+.noUi-pips * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.noUi-pips {
+  position: absolute;
+  color: #999;
+}
+
+.noUi-value {
+  position: absolute;
+  white-space: nowrap;
+  text-align: center;
+}
+
+.noUi-value-sub {
+  color: #ccc;
+  font-size: 10px;
+}
+
+.noUi-marker {
+  position: absolute;
+  background: #CCC;
+}
+
+.noUi-marker-sub {
+  background: #AAA;
+}
+
+.noUi-marker-large {
+  background: #AAA;
+}
+
+.noUi-pips-horizontal {
+  padding: 10px 0;
+  height: 80px;
+  top: 100%;
+  left: 0;
+  width: 100%;
+}
+
+.noUi-value-horizontal {
+  -webkit-transform: translate(-50%, 50%);
+  -ms-transform: translate(-50%, 50%);
+  transform: translate(-50%, 50%);
+}
+
+.noUi-rtl .noUi-value-horizontal {
+  -webkit-transform: translate(50%, 50%);
+  -ms-transform: translate(50%, 50%);
+  transform: translate(50%, 50%);
+}
+
+.noUi-marker-horizontal.noUi-marker {
+  margin-left: -1px;
+  width: 2px;
+  height: 5px;
+}
+
+.noUi-marker-horizontal.noUi-marker-sub {
+  height: 10px;
+}
+
+.noUi-marker-horizontal.noUi-marker-large {
+  height: 15px;
+}
+
+.noUi-pips-vertical {
+  padding: 0 10px;
+  height: 100%;
+  top: 0;
+  left: 100%;
+}
+
+.noUi-value-vertical {
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding-left: 25px;
+}
+
+.noUi-rtl .noUi-value-vertical {
+  -webkit-transform: translate(0, 50%);
+  -ms-transform: translate(0, 50%);
+  transform: translate(0, 50%);
+}
+
+.noUi-marker-vertical.noUi-marker {
+  width: 5px;
+  height: 2px;
+  margin-top: -1px;
+}
+
+.noUi-marker-vertical.noUi-marker-sub {
+  width: 10px;
+}
+
+.noUi-marker-vertical.noUi-marker-large {
+  width: 15px;
+}
+
+.noUi-tooltip {
+  display: block;
+  position: absolute;
+  border: 1px solid #D9D9D9;
+  border-radius: 3px;
+  background: #fff;
+  color: #000;
+  padding: 5px;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.noUi-horizontal .noUi-tooltip {
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  left: 50%;
+  bottom: 120%;
+}
+
+.noUi-vertical .noUi-tooltip {
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  top: 50%;
+  right: 120%;
+}
+
+.noUi-horizontal .noUi-origin > .noUi-tooltip {
+  -webkit-transform: translate(50%, 0);
+  -ms-transform: translate(50%, 0);
+  transform: translate(50%, 0);
+  left: auto;
+  bottom: 10px;
+}
+
+.noUi-vertical .noUi-origin > .noUi-tooltip {
+  -webkit-transform: translate(0, -18px);
+  -ms-transform: translate(0, -18px);
+  transform: translate(0, -18px);
+  top: auto;
+  right: 28px;
 }
 
 * {
