--- a/src/core/ui/layout/templates/map.pug
+++ b/src/core/ui/layout/templates/map.pug
@@ -4,7 +4,7 @@ html(lang="ru")
   meta(http-equiv="X-UA-Compatible", content="IE=edge")
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
   link(rel="stylesheet", href="/css/index.css")
-  style(type="text/ccss").
+  style(type="text/css").
     * {
       margin: 0;
       padding: 0;
