--- a/src/core/ui/layout/value-slider/value-slider.scss
+++ b/src/core/ui/layout/value-slider/value-slider.scss
@@ -1,81 +1,97 @@
+.slider-container.noui-slider-container {
+}
+
 .slider-title {
   font-weight: 600;
+  margin-bottom: 15px;
 }
 
-
-.slider-default-track {
-  position: relative;
-  width: 225px;
-  height: 4px;
-  background: var(--slider-track-bg, #e0e0e0);
-  border-radius: 3px;
+.nouislider-target {
   margin: 23px 0 15px 0;
-  z-index: 0; /* Явно задаем z-index */
-}
+  width: 225px;
 
-.slider-track {
-  position: relative;
-  width: 211px;
-  height: 4px;
-  background: var(--slider-track-bg, #e0e0e0);
-  border-radius: 3px;
-  margin: -19px 7px 15px 7px;
-  z-index: 1; /* Делаем выше */
-}
+  &.noUi-target {
+    background: var(--slider-track-bg, #e0e0e0);
+    border-radius: 3px;
+    border: none;
+    box-shadow: none;
+    height: 4px !important;
+  }
 
-.slider-fill {
-  position: absolute;
-  height: 100%;
-  background: var(--slider-active-bg, #2e7d32);
-  box-shadow: 0 3px 15px var(--slider-active-shadow, rgba(46, 125, 50, 0.2));
-  border-radius: 3px;
-}
+  .noUi-connect {
+    background: var(--slider-active-bg, #2e7d32);
+    box-shadow: 0 3px 15px var(--slider-active-shadow, rgba(46, 125, 50, 0.2));
+    border-radius: 3px;
+  }
 
-.slider-handle {
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  background: linear-gradient(193deg, #1b5e20 24%, #43a047 86%);
-  box-shadow: 
-    inset 3px 5px 12px rgba(255, 255, 255, 0.2),
-    0 10px 27px rgba(30, 29, 46, 0.3);
-  cursor: grab;
-  z-index: 1;
-}
+  .noUi-handle {
+    width: 16px !important;
+    height: 16px !important;
+    border-radius: 50% !important;
+    background: linear-gradient(193deg, #1b5e20 24%, #43a047 86%) !important;
+    box-shadow:
+      inset 3px 5px 12px rgba(255, 255, 255, 0.2),
+      0 10px 27px rgba(30, 29, 46, 0.3) !important;
+    border: none !important;
+    cursor: grab;
 
-.slider-tooltip {
-  position: absolute;
-  bottom: 29px;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 2px 5px;
-  background: var(--slider-tooltip-bg, rgba(48, 48, 61, 1));
-  color: white;
-  border-radius: 3px;
-  font-size: 16px;
-  white-space: nowrap;
-}
+    &::before, &::after {
+      display: none;
+    }
+     top: -6px !important;
+     &.noUi-handle-lower { right: -15px !important; }
+     &.noUi-handle-upper { right: -1px !important; }
+  }
 
-.slider-tooltip::after {
-  content: '';
-  position: absolute;
-  bottom: -5px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 12px;
-  height: 5px;
-  background: #30303D;
-  -webkit-mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.25112 4.80948L0 0L10.5022 6.84265e-07L5.25112 4.80948Z" fill="black"/></svg>') no-repeat;
-  mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.25112 4.80948L0 0L10.5022 6.84265e-07L5.25112 4.80948Z" fill="black"/></svg>') no-repeat;
+  .noUi-handle:hover .noUi-tooltip,
+  .noUi-handle.noUi-active .noUi-tooltip {
+    display: block; // или opacity: 1; visibility: visible;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .noUi-active {
+    cursor: grabbing;
+  }
+
+  .noUi-tooltip {
+    position: absolute;
+    padding: 2px 5px;
+    background: var(--slider-tooltip-bg, rgba(48, 48, 61, 1));
+    color: white;
+    border-radius: 3px;
+    font-size: 16px;
+    line-height: 135%;
+    white-space: nowrap;
+    border: none;
+
+    margin-bottom: 7px;
+
+    display: none;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.1s ease-in-out, visibility 0.1s ease-in-out;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 11px;
+      height: 5px;
+      background-color: var(--slider-tooltip-bg, rgba(48, 48, 61, 1));
+      -webkit-mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 5L0 0h11L5.5 5z" fill="black"/></svg>') no-repeat center center / contain;
+      mask: url('data:image/svg+xml;utf8,<svg width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 5L0 0h11L5.5 5z" fill="black"/></svg>') no-repeat center center / contain;
+    }
+  }
 }
 
 .slider-inputs {
   display: flex;
   justify-content: space-between;
   max-width: 225px;
+  margin-top: 10px;
 }
 
 .input-number-field {
@@ -109,7 +125,7 @@
 
     &:focus {
       outline: none;
-       color: rgba(255, 255, 255, 1);
+      color: rgba(255, 255, 255, 1);
     }
 
     &::placeholder {
