--- a/src/sections/header/header.pug
+++ b/src/sections/header/header.pug
@@ -14,20 +14,19 @@ mixin header()
       icon: "Search"
     })
   .header__bottom-wrapper
-    +value-slider({
+    +value-slider-noui({   
       title: "Price Range",
       titleTag: "h3",
       config: {
-      handles: 2,
       minValue: 234,
       maxValue: 9999,
       minRange: 234,
       maxRange: 9999,
       unit: " $",
       showInputs: true,
-      showMinInput: true,
+      showMinInput: true,  
       showMaxInput: true
     }
-    }).price-filter
+  }).price-filter          
     .header__filter-buttons 
       h2.header__subtitle 1034,5 Results
